--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,31 +1,35 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion versions.compiledSdk
-    buildToolsVersion "$versions.buildTools"
+    compileSdkVersion project.compiledSdk
+    buildToolsVersion project.buildTools
     defaultConfig {
         applicationId "es.coru.andiag.andiag_mvp_demo"
-        minSdkVersion 16
-        targetSdkVersion versions.compiledSdk
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion project.minSdk
+        targetSdkVersion project.compiledSdk
+        versionCode project.libraryCode
+        versionName project.libraryName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'
-
-    compile "com.android.support:appcompat-v7:$versions.supportLib"
+    compile "com.android.support:appcompat-v7:$supportLib"
     compile project(path: ':library')
 }
