--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
-    ext {
-        versions = [supportLib: '25.1.0',
-                    buildTools: "25.0.2",
-                    compiledSdk: 25]
-    }
+ext {
+    libraryCode = 1
+    libraryName = '0.0.7'
+    compiledSdk = 25
+    buildTools = '25.0.2'
+    supportLib = '25.1.0'
+    minSdk = 9
 
+    androidSupportTestRunner = '0.5'
+}
+
+buildscript {
     repositories {
         jcenter()
     }
