--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="es.coru.andiag.andiag_mvp_demo">
+          package="com.andiag.demo_app">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="es.coru.andiag.andiag_mvp_demo.ActivityMain">
+        <activity android:name="com.andiag.demo_app.ActivityMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ActivityFragment"/>
+        <activity android:name="com.andiag.demo_app.ActivityFragment"/>
 
     </application>
 
