--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 ext {
-    libraryCode = 1
-    libraryName = '0.1'
+    libraryCode = 2
+    libraryName = '0.2'
     compiledSdk = 25
     buildTools = '25.0.2'
     supportLib = '25.1.0'
     minSdk = 9
 
     androidSupportTestRunner = '0.5'
+
 }
 
 buildscript {
+    ext.butterknife = '8.4.0'
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath "com.jakewharton:butterknife-gradle-plugin:$butterknife"
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
