--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':demo-app', ':core', ':commons', ':commons-compat', ':shared'
+include ':app', ':core', ':commons-compat', ':shared', ':shared-core', ':core-compat', ':commons'
