--- a/commons-compat/src/main/AndroidManifest.xml
+++ b/commons-compat/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
-<manifest
-    package="com.andiag.commons.compat"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.andiag.commons.compat">
+
+    <uses-permission
+        android:name="android.permission.GET_ACCOUNTS"
+        tools:node="remove"/>
+
+</manifest>
