--- a/commons-compat/build.gradle
+++ b/commons-compat/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'com.github.dcendents.android-maven'
 
 apply from: '../quality/quality.gradle'
@@ -17,6 +16,10 @@ android {
         versionName project.libraryName
     }
 
+    buildTypes {
+        debug {}
+    }
+
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
@@ -28,11 +31,11 @@ android {
 }
 
 dependencies {
-    annotationProcessor "com.jakewharton:butterknife-compiler:$project.butterknife"
+    debugCompile "com.google.android.gms:play-services-base:$gms"
+    debugCompile "com.jakewharton:butterknife:$project.butterknife"
 
-    compile "com.google.android.gms:play-services-base:$gms"
-
-    compile "com.jakewharton:butterknife:$project.butterknife"
+    //Release Dependencies
     compile project(path: ':shared')
     compile project(path: ':core-compat')
+    compile project(path: ':shared-commons')
 }
