--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion project.buildTools
     defaultConfig {
         applicationId "es.coru.andiag.andiag_mvp_demo"
-        minSdkVersion project.minSdk
+        minSdkVersion project.minNoCompatSdk
         targetSdkVersion project.compiledSdk
         versionCode project.libraryCode
         versionName project.libraryName
@@ -29,5 +29,9 @@ android {
 }
 
 dependencies {
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
+    compile 'com.jakewharton:butterknife:8.4.0'
+
     compile project(path: ':core-compat')
 }
