--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme">
+        android:theme="@style/AppTheme">
 
         <activity android:name="com.andiag.demo_app.ActivityMain">
             <intent-filter>
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.andiag.demo_app.ActivityFragment"/>
+        <activity android:name="com.andiag.demo_app.simple.ActivityFragment"/>
 
     </application>
 
