--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -16,10 +16,6 @@ android {
         versionName project.libraryName
     }
 
-    buildTypes {
-        debug {}
-    }
-
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
@@ -31,7 +27,7 @@ android {
 }
 
 dependencies {
-    debugCompile "com.jakewharton:butterknife:$project.butterknife"
+    compile "com.jakewharton:butterknife:$project.butterknife"
 
     //Release Dependencies
     compile project(path: ':shared')
